--- a/src/app/components/travel/components/travel.gmap.html
+++ b/src/app/components/travel/components/travel.gmap.html
@@ -1,3 +1,5 @@
 <div class="row map-area">
-  <div id="map-canvas"></div>
+  <ngui-inview class="map-in-view">
+    <div *ngIf id="map-canvas"></div>
+  </ngui-inview>
 </div>
