--- a/app/docs/components/TravelComponent.html
+++ b/app/docs/components/TravelComponent.html
@@ -140,7 +140,7 @@ export class TravelComponent {
         <pre class="line-numbers"><code class="language-html">&lt;section class&#x3D;&quot;travel&quot; id&#x3D;&quot;travel&quot;&gt;
   &lt;div class&#x3D;&quot;container&quot;&gt;
     &lt;div class&#x3D;&quot;heading&quot;&gt;
-      &lt;h2 class&#x3D;&quot;js_trigger_map_marker&quot;&gt;Places I&#x27;ve been&lt;/h2&gt;
+      &lt;h2&gt;Places I&#x27;ve been&lt;/h2&gt;
       &lt;blockquote&gt;&quot;you have brains in your head. you have feet in your shoes. you can steer yourself any direction you choose.&quot; - dr. seuss&lt;/blockquote&gt;
     &lt;/div&gt;
   &lt;/div&gt;
@@ -200,7 +200,7 @@ export class TravelComponent {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><section class="travel" id="travel">  <div class="container">    <div class="heading">      <h2 class="js_trigger_map_marker">Places I\'ve been</h2>      <blockquote>"you have brains in your head. you have feet in your shoes. you can steer yourself any direction you choose." - dr. seuss</blockquote>    </div>  </div>  <app-googlemap></app-googlemap></section></div>'
+        var COMPONENT_TEMPLATE = '<div><section class="travel" id="travel">  <div class="container">    <div class="heading">      <h2>Places I\'ve been</h2>      <blockquote>"you have brains in your head. you have feet in your shoes. you can steer yourself any direction you choose." - dr. seuss</blockquote>    </div>  </div>  <app-googlemap></app-googlemap></section></div>'
     var COMPONENTS = [{'name': 'AboutComponent', 'selector': 'app-about'},{'name': 'AppComponent', 'selector': 'app-container'},{'name': 'ContactComponent', 'selector': 'app-contact'},{'name': 'ContactFormComponent', 'selector': 'app-contact-form'},{'name': 'EducationComponent', 'selector': 'app-education'},{'name': 'ExperienceComponent', 'selector': 'app-experience'},{'name': 'FooterComponent', 'selector': 'app-footer'},{'name': 'HeaderComponent', 'selector': 'app-header'},{'name': 'SkillsComponent', 'selector': 'app-skills'},{'name': 'TravelComponent', 'selector': 'app-travel'},{'name': 'TravelMapComponent', 'selector': 'app-googlemap'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'TravelComponent'};
