--- a/app/docs/components/ContactFormComponent.html
+++ b/app/docs/components/ContactFormComponent.html
@@ -131,10 +131,6 @@
                     <td class="col-md-4">
                         <ul class="index-list">
                             <li>
-                                    <span class="modifier">Private</span>
-                                <a href="#_contactService">_contactService</a>
-                            </li>
-                            <li>
                                     <span class="modifier">Public</span>
                                 <a href="#email">email</a>
                             </li>
@@ -235,12 +231,12 @@
             <tbody>
                 <tr>
                     <td class="col-md-4">
-<code>constructor(contactService: <a href="../injectables/ContactService.html">ContactService</a>, fb: <a href="https://angular.io/api/forms/FormBuilder" target="_blank">FormBuilder</a>)</code>
+<code>constructor(_contactService: <a href="../injectables/ContactService.html">ContactService</a>, fb: <a href="https://angular.io/api/forms/FormBuilder" target="_blank">FormBuilder</a>)</code>
                     </td>
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="27" class="link-to-prism">src/app/components/contact/components/contact.form.ts:27</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="26" class="link-to-prism">src/app/components/contact/components/contact.form.ts:26</a></div>
                             </td>
                         </tr>
 
@@ -258,7 +254,7 @@
                                         </thead>
                                         <tbody>
                                                 <tr>
-                                                        <td>contactService</td>
+                                                        <td>_contactService</td>
                                                   
                                                         <td>
                                                                         <code><a href="../injectables/ContactService.html" target="_self" >ContactService</a></code>
@@ -321,8 +317,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="106"
-                            class="link-to-prism">src/app/components/contact/components/contact.form.ts:106</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="97"
+                            class="link-to-prism">src/app/components/contact/components/contact.form.ts:97</a></div>
                 </td>
             </tr>
 
@@ -391,8 +387,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="100"
-                            class="link-to-prism">src/app/components/contact/components/contact.form.ts:100</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="91"
+                            class="link-to-prism">src/app/components/contact/components/contact.form.ts:91</a></div>
                 </td>
             </tr>
 
@@ -461,8 +457,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="85"
-                            class="link-to-prism">src/app/components/contact/components/contact.form.ts:85</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="76"
+                            class="link-to-prism">src/app/components/contact/components/contact.form.ts:76</a></div>
                 </td>
             </tr>
 
@@ -531,8 +527,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="80"
-                            class="link-to-prism">src/app/components/contact/components/contact.form.ts:80</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="71"
+                            class="link-to-prism">src/app/components/contact/components/contact.form.ts:71</a></div>
                 </td>
             </tr>
 
@@ -570,8 +566,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="51"
-                            class="link-to-prism">src/app/components/contact/components/contact.form.ts:51</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="42"
+                            class="link-to-prism">src/app/components/contact/components/contact.form.ts:42</a></div>
                 </td>
             </tr>
 
@@ -609,8 +605,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="47"
-                            class="link-to-prism">src/app/components/contact/components/contact.form.ts:47</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="38"
+                            class="link-to-prism">src/app/components/contact/components/contact.form.ts:38</a></div>
                 </td>
             </tr>
 
@@ -648,8 +644,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="59"
-                            class="link-to-prism">src/app/components/contact/components/contact.form.ts:59</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="50"
+                            class="link-to-prism">src/app/components/contact/components/contact.form.ts:50</a></div>
                 </td>
             </tr>
 
@@ -687,8 +683,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="63"
-                            class="link-to-prism">src/app/components/contact/components/contact.form.ts:63</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="54"
+                            class="link-to-prism">src/app/components/contact/components/contact.form.ts:54</a></div>
                 </td>
             </tr>
 
@@ -726,8 +722,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="115"
-                            class="link-to-prism">src/app/components/contact/components/contact.form.ts:115</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="106"
+                            class="link-to-prism">src/app/components/contact/components/contact.form.ts:106</a></div>
                 </td>
             </tr>
 
@@ -753,34 +749,6 @@
             <tbody>
                 <tr>
                     <td class="col-md-4">
-                        <a name="_contactService"></a>
-                        <span class="name">
-                            <b>
-                                <span class="modifier">Private</span>
-                            _contactService</b>
-                            <a href="#_contactService"><span class="icon ion-ios-link"></span></a>
-                        </span>
-                    </td>
-                </tr>
-                    <tr>
-                        <td class="col-md-4">
-                            <i>Type : </i>        <code><a href="../injectables/ContactService.html" target="_self" >ContactService</a></code>
-
-                        </td>
-                    </tr>
-                        <tr>
-                            <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="27" class="link-to-prism">src/app/components/contact/components/contact.form.ts:27</a></div>
-                            </td>
-                        </tr>
-
-
-            </tbody>
-        </table>
-        <table class="table table-sm table-bordered">
-            <tbody>
-                <tr>
-                    <td class="col-md-4">
                         <a name="email"></a>
                         <span class="name">
                             <b>
@@ -794,6 +762,11 @@
                         <td class="col-md-4">
                             <i>Type : </i>        <code><a href="https://angular.io/api/forms/FormControl" target="_blank" >FormControl</a></code>
 
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <i>Default value : </i><code>new FormControl(&#x27;&#x27;, Validators.required)</code>
                         </td>
                     </tr>
                         <tr>
@@ -854,7 +827,7 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="18" class="link-to-prism">src/app/components/contact/components/contact.form.ts:18</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="26" class="link-to-prism">src/app/components/contact/components/contact.form.ts:26</a></div>
                             </td>
                         </tr>
 
@@ -880,9 +853,14 @@
 
                         </td>
                     </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <i>Default value : </i><code>new FormControl(&#x27;&#x27;)</code>
+                        </td>
+                    </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">src/app/components/contact/components/contact.form.ts:19</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="18" class="link-to-prism">src/app/components/contact/components/contact.form.ts:18</a></div>
                             </td>
                         </tr>
 
@@ -908,9 +886,14 @@
 
                         </td>
                     </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <i>Default value : </i><code>new FormControl(&#x27;&#x27;, Validators.required)</code>
+                        </td>
+                    </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="20" class="link-to-prism">src/app/components/contact/components/contact.form.ts:20</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">src/app/components/contact/components/contact.form.ts:19</a></div>
                             </td>
                         </tr>
 
@@ -936,9 +919,14 @@
 
                         </td>
                     </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <i>Default value : </i><code>new FormControl(&#x27;&#x27;, Validators.required)</code>
+                        </td>
+                    </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="21" class="link-to-prism">src/app/components/contact/components/contact.form.ts:21</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="20" class="link-to-prism">src/app/components/contact/components/contact.form.ts:20</a></div>
                             </td>
                         </tr>
 
@@ -960,13 +948,12 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank" >boolean</a></code>
-
+                            <i>Default value : </i><code>false</code>
                         </td>
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="22" class="link-to-prism">src/app/components/contact/components/contact.form.ts:22</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="21" class="link-to-prism">src/app/components/contact/components/contact.form.ts:21</a></div>
                             </td>
                         </tr>
 
@@ -994,7 +981,7 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="23" class="link-to-prism">src/app/components/contact/components/contact.form.ts:23</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="22" class="link-to-prism">src/app/components/contact/components/contact.form.ts:22</a></div>
                             </td>
                         </tr>
 
@@ -1020,9 +1007,14 @@
 
                         </td>
                     </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <i>Default value : </i><code>&#x27;Send message&#x27;</code>
+                        </td>
+                    </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="24" class="link-to-prism">src/app/components/contact/components/contact.form.ts:24</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="23" class="link-to-prism">src/app/components/contact/components/contact.form.ts:23</a></div>
                             </td>
                         </tr>
 
@@ -1044,13 +1036,12 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank" >boolean</a></code>
-
+                            <i>Default value : </i><code>false</code>
                         </td>
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="25" class="link-to-prism">src/app/components/contact/components/contact.form.ts:25</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="24" class="link-to-prism">src/app/components/contact/components/contact.form.ts:24</a></div>
                             </td>
                         </tr>
 
@@ -1072,13 +1063,12 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank" >boolean</a></code>
-
+                            <i>Default value : </i><code>false</code>
                         </td>
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="26" class="link-to-prism">src/app/components/contact/components/contact.form.ts:26</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="25" class="link-to-prism">src/app/components/contact/components/contact.form.ts:25</a></div>
                             </td>
                         </tr>
 
@@ -1106,35 +1096,26 @@ import { ContactService } from &#x27;../services/contact&#x27;;
   templateUrl: &#x27;contact.form.html&#x27;,
 })
 export class ContactFormComponent implements OnInit {
-  public email: FormControl;
+  public email: FormControl &#x3D; new FormControl(&#x27;&#x27;, Validators.required);
   public errorMessages: Array&lt;IErrorMessage&gt;;
-  public form: FormGroup;
-  public heuning: FormControl;
-  public message: FormControl;
-  public name: FormControl;
-  public sentSuccessfully: boolean;
+  public heuning: FormControl &#x3D; new FormControl(&#x27;&#x27;);
+  public message: FormControl &#x3D; new FormControl(&#x27;&#x27;, Validators.required);
+  public name: FormControl &#x3D; new FormControl(&#x27;&#x27;, Validators.required);
+  public sentSuccessfully &#x3D; false;
   public serverErrors: string;
-  public submitBtnText: string;
-  public submitClicked: boolean;
-  public submitting: boolean;
-  private _contactService: ContactService;
+  public submitBtnText &#x3D; &#x27;Send message&#x27;;
+  public submitClicked &#x3D; false;
+  public submitting &#x3D; false;
+  public form: FormGroup;
 
-  constructor(contactService: ContactService, fb: FormBuilder) {
-    this.email &#x3D; new FormControl(&#x27;&#x27;, Validators.required);
-    this.heuning &#x3D; new FormControl(&#x27;&#x27;);
-    this.message &#x3D; new FormControl(&#x27;&#x27;, Validators.required);
-    this.name &#x3D; new FormControl(&#x27;&#x27;, Validators.required);
+  constructor(private _contactService: ContactService,
+              private fb: FormBuilder) {
     this.form &#x3D; fb.group({
       email: this.email,
       heuning: this.heuning,
       message: this.message,
       name: this.name,
     });
-    this.sentSuccessfully &#x3D; false;
-    this.submitBtnText &#x3D; &#x27;Send message&#x27;;
-    this.submitClicked &#x3D; false;
-    this.submitting &#x3D; false;
-    this._contactService &#x3D; contactService;
   }
 
   ngOnInit(): void {
