--- a/app/docs/components/EducationComponent.html
+++ b/app/docs/components/EducationComponent.html
@@ -131,10 +131,6 @@
                     <td class="col-md-4">
                         <ul class="index-list">
                             <li>
-                                    <span class="modifier">Private</span>
-                                <a href="#_educationService">_educationService</a>
-                            </li>
-                            <li>
                                     <span class="modifier">Public</span>
                                 <a href="#schools">schools</a>
                             </li>
@@ -174,45 +170,15 @@
             <tbody>
                 <tr>
                     <td class="col-md-4">
-<code>constructor(educationService: <a href="../injectables/EducationService.html">EducationService</a>)</code>
+<code>constructor()</code>
                     </td>
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="12" class="link-to-prism">src/app/components/education/components/education.ts:12</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="11" class="link-to-prism">src/app/components/education/components/education.ts:11</a></div>
                             </td>
                         </tr>
 
-                <tr>
-                    <td class="col-md-4">
-                            <div>
-                                    <b>Parameters :</b>
-                                    <table class="params">
-                                        <thead>
-                                            <tr>
-                                                <td>Name</td>
-                                                    <td>Type</td>
-                                                <td>Optional</td>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                                <tr>
-                                                        <td>educationService</td>
-                                                  
-                                                        <td>
-                                                                        <code><a href="../injectables/EducationService.html" target="_self" >EducationService</a></code>
-                                                        </td>
-                                                  
-                                                    <td>
-                                                            No
-                                                    </td>
-                                                    
-                                                </tr>
-                                        </tbody>
-                                    </table>
-                            </div>
-                    </td>
-                </tr>
             </tbody>
         </table>
 </section>
@@ -248,8 +214,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="23"
-                            class="link-to-prism">src/app/components/education/components/education.ts:23</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="20"
+                            class="link-to-prism">src/app/components/education/components/education.ts:20</a></div>
                 </td>
             </tr>
 
@@ -287,8 +253,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="18"
-                            class="link-to-prism">src/app/components/education/components/education.ts:18</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="16"
+                            class="link-to-prism">src/app/components/education/components/education.ts:16</a></div>
                 </td>
             </tr>
 
@@ -310,34 +276,6 @@
         <h3 id="inputs">
             Properties
         </h3>
-        <table class="table table-sm table-bordered">
-            <tbody>
-                <tr>
-                    <td class="col-md-4">
-                        <a name="_educationService"></a>
-                        <span class="name">
-                            <b>
-                                <span class="modifier">Private</span>
-                            _educationService</b>
-                            <a href="#_educationService"><span class="icon ion-ios-link"></span></a>
-                        </span>
-                    </td>
-                </tr>
-                    <tr>
-                        <td class="col-md-4">
-                            <i>Type : </i>        <code><a href="../injectables/EducationService.html" target="_self" >EducationService</a></code>
-
-                        </td>
-                    </tr>
-                        <tr>
-                            <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="12" class="link-to-prism">src/app/components/education/components/education.ts:12</a></div>
-                            </td>
-                        </tr>
-
-
-            </tbody>
-        </table>
         <table class="table table-sm table-bordered">
             <tbody>
                 <tr>
@@ -383,15 +321,12 @@ import { EducationService } from &#x27;../services/education&#x27;;
 })
 export class EducationComponent implements OnInit {
   public schools: Array&lt;School&gt;;
-  private _educationService: EducationService;
 
-  constructor(educationService: EducationService) {
-    this._educationService &#x3D; educationService;
+  constructor() {
   }
 
   ngOnInit() {
     this.loadSchools();
-    // this.loadCodeSchool();
   }
 
   loadSchools(): void {
