--- a/app/docs/components/FooterComponent.html
+++ b/app/docs/components/FooterComponent.html
@@ -218,8 +218,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="22"
-                            class="link-to-prism">src/app/components/footer/components/footer.ts:22</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="21"
+                            class="link-to-prism">src/app/components/footer/components/footer.ts:21</a></div>
                 </td>
             </tr>
 
@@ -257,8 +257,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="18"
-                            class="link-to-prism">src/app/components/footer/components/footer.ts:18</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="17"
+                            class="link-to-prism">src/app/components/footer/components/footer.ts:17</a></div>
                 </td>
             </tr>
 
@@ -297,6 +297,11 @@
                         <td class="col-md-4">
                             <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Date" target="_blank" >Date</a></code>
 
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <i>Default value : </i><code>new Date()</code>
                         </td>
                     </tr>
                         <tr>
@@ -353,10 +358,9 @@ import { FooterService } from &#x27;../services/footer&#x27;;
 })
 export class FooterComponent implements OnInit {
   public links: Array&lt;Link&gt;;
-  public currentDate: Date;
+  public currentDate: Date &#x3D; new Date();
 
   constructor() {
-    this.currentDate &#x3D; new Date();
   }
 
   ngOnInit() {
