--- a/app/docs/components/HeaderComponent.html
+++ b/app/docs/components/HeaderComponent.html
@@ -132,10 +132,6 @@
                         <ul class="index-list">
                             <li>
                                     <span class="modifier">Private</span>
-                                <a href="#_headerService">_headerService</a>
-                            </li>
-                            <li>
-                                    <span class="modifier">Private</span>
                                 <a href="#_onDraw">_onDraw</a>
                             </li>
                             <li>
@@ -206,7 +202,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="17" class="link-to-prism">src/app/components/header/components/header.ts:17</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/app/components/header/components/header.ts:16</a></div>
                             </td>
                         </tr>
 
@@ -275,8 +271,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="43"
-                            class="link-to-prism">src/app/components/header/components/header.ts:43</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="41"
+                            class="link-to-prism">src/app/components/header/components/header.ts:41</a></div>
                 </td>
             </tr>
 
@@ -345,8 +341,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="28"
-                            class="link-to-prism">src/app/components/header/components/header.ts:28</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="26"
+                            class="link-to-prism">src/app/components/header/components/header.ts:26</a></div>
                 </td>
             </tr>
 
@@ -384,8 +380,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="58"
-                            class="link-to-prism">src/app/components/header/components/header.ts:58</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="56"
+                            class="link-to-prism">src/app/components/header/components/header.ts:56</a></div>
                 </td>
             </tr>
 
@@ -423,8 +419,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="35"
-                            class="link-to-prism">src/app/components/header/components/header.ts:35</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="33"
+                            class="link-to-prism">src/app/components/header/components/header.ts:33</a></div>
                 </td>
             </tr>
 
@@ -462,8 +458,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="23"
-                            class="link-to-prism">src/app/components/header/components/header.ts:23</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="21"
+                            class="link-to-prism">src/app/components/header/components/header.ts:21</a></div>
                 </td>
             </tr>
 
@@ -501,8 +497,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="76"
-                            class="link-to-prism">src/app/components/header/components/header.ts:76</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="74"
+                            class="link-to-prism">src/app/components/header/components/header.ts:74</a></div>
                 </td>
             </tr>
 
@@ -590,8 +586,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="101"
-                            class="link-to-prism">src/app/components/header/components/header.ts:101</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="99"
+                            class="link-to-prism">src/app/components/header/components/header.ts:99</a></div>
                 </td>
             </tr>
 
@@ -617,34 +613,6 @@
             <tbody>
                 <tr>
                     <td class="col-md-4">
-                        <a name="_headerService"></a>
-                        <span class="name">
-                            <b>
-                                <span class="modifier">Private</span>
-                            _headerService</b>
-                            <a href="#_headerService"><span class="icon ion-ios-link"></span></a>
-                        </span>
-                    </td>
-                </tr>
-                    <tr>
-                        <td class="col-md-4">
-                            <i>Type : </i>        <code><a href="../injectables/HeaderService.html" target="_self" >HeaderService</a></code>
-
-                        </td>
-                    </tr>
-                        <tr>
-                            <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/app/components/header/components/header.ts:14</a></div>
-                            </td>
-                        </tr>
-
-
-            </tbody>
-        </table>
-        <table class="table table-sm table-bordered">
-            <tbody>
-                <tr>
-                    <td class="col-md-4">
                         <a name="_onDraw"></a>
                         <span class="name">
                             <b>
@@ -662,7 +630,7 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="17" class="link-to-prism">src/app/components/header/components/header.ts:17</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/app/components/header/components/header.ts:16</a></div>
                             </td>
                         </tr>
 
@@ -690,7 +658,7 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/app/components/header/components/header.ts:16</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="15" class="link-to-prism">src/app/components/header/components/header.ts:15</a></div>
                             </td>
                         </tr>
 
@@ -718,7 +686,7 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="15" class="link-to-prism">src/app/components/header/components/header.ts:15</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/app/components/header/components/header.ts:14</a></div>
                             </td>
                         </tr>
 
@@ -772,13 +740,11 @@ import { HeaderService } from &#x27;../services/header&#x27;;
 })
 export class HeaderComponent implements OnInit {
   public imageIds: Array&lt;string&gt;;
-  private _headerService: HeaderService;
   private _previousWidth: number;
   private _previousHeight: number;
   private _onDraw: () &#x3D;&gt; void;
 
-  constructor(_headerService: HeaderService) {
-    this._headerService &#x3D; _headerService;
+  constructor(private _headerService: HeaderService) {
   }
 
   ngOnInit(): void {
