--- a/app/docs/components/SkillsComponent.html
+++ b/app/docs/components/SkillsComponent.html
@@ -228,8 +228,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="55"
-                            class="link-to-prism">src/app/components/skills/components/skills.ts:55</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="54"
+                            class="link-to-prism">src/app/components/skills/components/skills.ts:54</a></div>
                 </td>
             </tr>
 
@@ -267,8 +267,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="26"
-                            class="link-to-prism">src/app/components/skills/components/skills.ts:26</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="25"
+                            class="link-to-prism">src/app/components/skills/components/skills.ts:25</a></div>
                 </td>
             </tr>
 
@@ -306,8 +306,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="35"
-                            class="link-to-prism">src/app/components/skills/components/skills.ts:35</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="34"
+                            class="link-to-prism">src/app/components/skills/components/skills.ts:34</a></div>
                 </td>
             </tr>
 
@@ -345,8 +345,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="21"
-                            class="link-to-prism">src/app/components/skills/components/skills.ts:21</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="20"
+                            class="link-to-prism">src/app/components/skills/components/skills.ts:20</a></div>
                 </td>
             </tr>
 
@@ -383,13 +383,12 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank" >boolean</a></code>
-
+                            <i>Default value : </i><code>false</code>
                         </td>
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="15" class="link-to-prism">src/app/components/skills/components/skills.ts:15</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/app/components/skills/components/skills.ts:13</a></div>
                             </td>
                         </tr>
 
@@ -445,7 +444,7 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/app/components/skills/components/skills.ts:13</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="15" class="link-to-prism">src/app/components/skills/components/skills.ts:15</a></div>
                             </td>
                         </tr>
 
@@ -470,12 +469,11 @@ import { SkillService } from &#x27;../services/skills&#x27;;
   templateUrl: &#x27;skills.html&#x27;,
 })
 export class SkillsComponent implements OnInit {
-  public skills: Array&lt;Skill&gt;;
+  private _skillChartDrawn &#x3D; false;
   private _timeoutScroll: any;
-  private _skillChartDrawn: boolean;
+  public skills: Array&lt;Skill&gt;;
 
   constructor() {
-    this._skillChartDrawn &#x3D; false;
   }
 
   ngOnInit(): void {
