--- a/app/docs/components/TravelMapComponent.html
+++ b/app/docs/components/TravelMapComponent.html
@@ -1320,7 +1320,7 @@ export class TravelMapComponent implements OnInit {
   margin: 0;
 
   .map-in-view {
-    display: unset;
+    display: inline;
   }
 
   @include respond-to($query: $screen-x2-min) {
