--- a/src/app/components/about/components/about.html
+++ b/src/app/components/about/components/about.html
@@ -24,9 +24,9 @@
         <p><i class="icon-camera-alt"></i>&nbsp;Photography, <i class="icon-android"></i>&nbsp;Android, <i class="icon-road"></i>&nbsp;travel and <i class="icon-flight"></i>&nbsp;plane spotting - not necessarily in that order.</p>
         <a id="cv_request" href="#contact-form" class="btn-normal js_track_link_click" aria-label="Request CV">Request CV &amp; References</a>
       </div>
-      <figure class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-md-offset-1 col-lg-offset-1 proPic">
+      <figure class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-md-offset-1 col-lg-offset-1 profile-pic">
         <ngui-inview>
-          <img *ngIf src="assets/images/louw.swart.jpg" alt="Louw Swart" class="img-circle top-margin" width="295" height="295" />
+          <img *ngIf src="assets/images/louw.swart.jpg" alt="Louw Swart" class="img-circle" width="295" height="295" />
         </ngui-inview>
       </figure>
     </div>
