--- a/src/app/components/about/components/about.scss
+++ b/src/app/components/about/components/about.scss
@@ -29,19 +29,34 @@
         text-decoration: none;
       }
 
-      @include respond-to($query: $screen-m1-min) {
+      @include respond-to($query: $breakpoint-992) {
         margin-bottom: 50px;
       }
 
-      @include respond-to($query: $screen-x2-min) {
+      @include respond-to($query: $breakpoint-480) {
         font-size: 13px;
         padding: 16px 14px;
       }
     }
 
     .profile-pic {
-      @include respond-to($query: $screen-m1-min) {
+      @include respond-to($query: $breakpoint-992) {
         text-align: center;
+      }
+      @include respond-to($query: $breakpoint-480) {
+        min-height: 405px;
+      }
+      @include respond-to($query: $breakpoint-420) {
+        min-height: 345px;
+      }
+      @include respond-to($query: $breakpoint-380) {
+        min-height: 305px;
+      }
+      @include respond-to($query: $breakpoint-360) {
+        min-height: 285px;
+      }
+      @include respond-to($query: $breakpoint-320) {
+        min-height: 265px;
       }
       min-width: 295px;
       min-height: 295px;
@@ -57,7 +72,7 @@
       color: $white;
     }
 
-    @include respond-to($query: $screen-x2-min) {
+    @include respond-to($query: $breakpoint-480) {
       img {
         width: 100%;
         height: 100%;
