--- a/src/app/components/contact/components/contact.form.scss
+++ b/src/app/components/contact/components/contact.form.scss
@@ -23,13 +23,13 @@
       margin-right: 0;
     }
 
-    @include respond-to($val: min-width, $query: $screen-sm-min) {
+    @include respond-to($val: min-width, $query: $breakpoint-767) {
       &.col-sm-6, &.col-lg-6 {
         width: 48.5%;
       }
     }
 
-    @include respond-to($query: $screen-x2-min) {
+    @include respond-to($query: $breakpoint-480) {
       margin-bottom: 20px;
     }
   }
