--- a/src/app/components/footer/components/footer.scss
+++ b/src/app/components/footer/components/footer.scss
@@ -25,7 +25,7 @@
         @include border-radius(50%);
         @include transition(all .2s ease-in-out);
 
-        @include respond-to($val: max-width, $query: $screen-x3-min) {
+        @include respond-to($val: max-width, $query: $breakpoint-360) {
           width: 35px !important;
           height: 35px !important;
         }
@@ -41,7 +41,7 @@
           width: 42px !important;
           height: 42px !important;
 
-          @include respond-to($val: max-width, $query: $screen-x3-min) {
+          @include respond-to($val: max-width, $query: $breakpoint-360) {
             width: 35px !important;
             height: 35px !important;
           }
@@ -49,7 +49,7 @@
           i {
             line-height: 40px !important;
 
-            @include respond-to($val: max-width, $query: $screen-x3-min) {
+            @include respond-to($val: max-width, $query: $breakpoint-360) {
               line-height: 33px !important;;
             }
           }
