--- a/src/app/components/about/components/about.html
+++ b/src/app/components/about/components/about.html
@@ -7,7 +7,7 @@
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7">
         <h3>Louw Swart</h3>
-        <h4 class="sub-heading">Analyst Programmer, Wellington</h4>
+        <h4 class="sub-heading">Front-end Developer, Wellington</h4>
         <p>I have been in <b>Software Development</b> since 2008, with most of that time spent in <b>Agile environments</b>, designing, coding, testing and supporting applications across a <b>variety of technologies</b> and <b>platforms</b>.</p>
         <p>While my background is <b>Java</b>, I have been focusing my attention on <b>JavaScript development</b> since June 2014, working with frameworks such as <b>Angular</b>, <b>React</b> and <b>GraphQL</b>. My passion is developing for the <b>Node.js</b> runtime.</p>
         <p>I have a strong <b>sense of responsibility</b> and am always driven to <b>deliver on or ahead of deadlines</b>. <b>Front-end</b> or <b>back-end</b>, I'm equally comfortable performing either or both.</p>
