--- a/src/app/components/about/components/about.html
+++ b/src/app/components/about/components/about.html
@@ -13,12 +13,12 @@
         <p>I have a strong <b>sense of responsibility</b> and am always driven to <b>deliver on or ahead of deadlines</b>. <b>Front-end</b> or <b>back-end</b>, I'm equally comfortable performing either or both.</p>
         <h4 class="sub-heading">Open Source Contributions</h4>
         <ul>
-          <li><a href="https://github.com/ng-bootstrap/ng-bootstrap" target="_blank">ng-bootstrap/ng-bootstrap</a></li>
-          <li><a href="https://github.com/angular/components" target="_blank">angular/components</a></li>
-          <li><a href="https://github.com/DefinitelyTyped/DefinitelyTyped" target="_blank">DefinitelyTyped/DefinitelyTyped</a></li>
-          <li><a href="https://github.com/creditkarma/graphql-validator" target="_blank">creditkarma/graphql-validator</a></li>
-          <li><a href="https://github.com/IdentityModel/oidc-client-js" target="_blank">IdentityModel/oidc-client-js</a></li>
-          <li><a href="https://github.com/daveho/AceGWT" target="_blank">daveho/AceGWT</a></li>
+          <li><a href="https://github.com/ng-bootstrap/ng-bootstrap" target="_blank" rel="noopener">ng-bootstrap/ng-bootstrap</a></li>
+          <li><a href="https://github.com/angular/components" target="_blank" rel="noopener">angular/components</a></li>
+          <li><a href="https://github.com/DefinitelyTyped/DefinitelyTyped" target="_blank" rel="noopener">DefinitelyTyped/DefinitelyTyped</a></li>
+          <li><a href="https://github.com/creditkarma/graphql-validator" target="_blank" rel="noopener">creditkarma/graphql-validator</a></li>
+          <li><a href="https://github.com/IdentityModel/oidc-client-js" target="_blank" rel="noopener">IdentityModel/oidc-client-js</a></li>
+          <li><a href="https://github.com/daveho/AceGWT" target="_blank" rel="noopener">daveho/AceGWT</a></li>
         </ul>
         <h4 class="sub-heading">Hobbies and Interests</h4>
         <p><i class="icon-camera-alt"></i>&nbsp;Photography, <i class="icon-android"></i>&nbsp;Android, <i class="icon-road"></i>&nbsp;travel and <i class="icon-flight"></i>&nbsp;plane spotting - not necessarily in that order.</p>
