--- a/src/app/components/about/components/about.scss
+++ b/src/app/components/about/components/about.scss
@@ -78,5 +78,12 @@
         height: 100%;
       }
     }
+
+    @include respond-to($query: $breakpoint-810) {
+      li a {
+        line-height: 2.5;
+        padding: 0.75em 0;
+      }
+    }
   }
 }
